ppc64/gcc 4.1.2: fix build after "8143072: [JVMCI] Port JVMCI to AArch64"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b103
    • ppc

      Field Abstract_VM_Version::_features changed type from int to uint64_t. This causes warning "vm_version_ppc.cpp:586: warning: negative integer implicitly converted to unsigned type" because enum Feature_Flag_Set contains entry '-1'.

            Assignee:
            Martin Doerr
            Reporter:
            Goetz Lindenmaier
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: